--- a/portfolio.html
+++ b/portfolio.html
@@ -52,108 +52,171 @@
           <h2 class="hidden">Our portfolio</h2>
           <ul class="projects-list mark">
             <li class="item">
-              <img
-                src="./images/banking.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/banking.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Banking App Interface Concept</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="item">
-              <img
-                src="./images/payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Cashless Payment</h3>
                 <p class="text">Marketing</p>
               </div>
               </li>
             <li class="item">
-              <img
-                src="./images/meditation.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Meditation App</h3>
                 <p class="text">App</p>
               </div>
             </li>
             <li class="item">
-              <img
-                src="./images/taxiservice.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/taxiservice.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Taxi Service</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="item">
-              <img
-                src="./images/illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Screen Illustrations</h3>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="item">
-              <img
-                src="./images/courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Online Courses</h3>
                 <p class="text">Marketing</p>
               </div>
             </li>
             <li class="item">
-              <img
-                src="./images/instaconcept.jpg"
-                alt="Instagram Stories"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/instaconcept.jpg"
+                  alt="Instagram Stories"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Instagram Stories Concept</h3>
                 <p class="text">Design</p>
               </div>
             </li>
             <li class="item">
-              <img
-                src="./images/organic.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/organic.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Organic Food</h3>
                 <p class="text">Web Site</p>
               </div>
             </li>
             <li class="item">
-              <img
-                src="./images/coffee.jpg"
-                alt="Coffee"
-                width="360"
-                height="300"
-              />
+              <div class="hover-box">
+                <img
+                  src="./images/coffee.jpg"
+                  alt="Coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="project-list-box">
                 <h3 class="title">Fresh Coffee</h3>
                 <p class="text">Web Site</p>
