Added modal window

--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
       <!--Hero-->
       <section class="hero">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="btn-primery">Order Service</button>
+          <button type="button" class="btn-primery" data-modal-open>Order Service</button>
         </section>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal">
+            <button class="btn-modal" data-modal-close>x</button>
+          </div>
+        </div>
       <!--Our advantages-->
       <section class="section-not-padding">
         <div class="container">
