--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="" class="logo link"><span class="logo-color">web</span>studio</a>
         <nav>
           <ul class="site-nav mark">
-            <li class="item"><a class="link" href="./index.html">Studio</a></li>
+            <li class="item"><a class="link current" href="./index.html">Studio</a></li>
             <li class="item"><a class="link" href="./portfolio.html">Portfolio</a></li>
             <li class="item"><a class="link" href="">Contacts</a></li>
           </ul>
@@ -42,7 +42,9 @@
         </section>
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
-            <button class="btn-modal" data-modal-close>x</button>
+            <button type="button" class="btn-modal" data-modal-close>
+              <img class="close" src="./images/close-black-18dp (2) 1(1).svg" alt="x">
+            </button>
           </div>
         </div>
       <!--Our advantages-->
