--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <nav>
           <ul class="site-nav mark">
             <li class="item"><a class="link" href="./index.html">Studio</a></li>
-            <li class="item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+            <li class="item"><a class="link current" href="./portfolio.html">Portfolio</a></li>
             <li class="item"><a class="link" href="">Contacts</a></li>
           </ul>
         </nav>
@@ -52,175 +52,193 @@
           <h2 class="hidden">Our portfolio</h2>
           <ul class="projects-list mark">
             <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/banking.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+              <a href="" class="project-link">
+                <div class="hover-box">
+                  <img
+                    src="./images/banking.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Banking App Interface Concept</h3>
-                <p class="text">App</p>
-              </div>
+                <div class="project-list-box">
+                  <h3 class="title">Banking App Interface Concept</h3>
+                  <p class="text">App</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/payment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+              <a href="" class="project-link">
+                <div class="hover-box">
+                  <img
+                    src="./images/payment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Cashless Payment</h3>
-                <p class="text">Marketing</p>
-              </div>
-              </li>
-            <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/meditation.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+                <div class="project-list-box">
+                  <h3 class="title">Cashless Payment</h3>
+                  <p class="text">Marketing</p>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Meditation App</h3>
-                <p class="text">App</p>
-              </div>
+              </a>
             </li>
             <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/taxiservice.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+              <a href="" class="project-link">
+                <div class="hover-box">
+                  <img
+                    src="./images/meditation.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Taxi Service</h3>
-                <p class="text">Marketing</p>
-              </div>
+                <div class="project-list-box">
+                  <h3 class="title">Meditation App</h3>
+                  <p class="text">App</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/illustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+              <a href="" class="project-link">
+                <div class="hover-box">
+                  <img
+                    src="./images/taxiservice.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Screen Illustrations</h3>
-                <p class="text">Design</p>
-              </div>
+                <div class="project-list-box">
+                  <h3 class="title">Taxi Service</h3>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+              <a href="" class="project-link">
+                <div class="hover-box">
+                  <img
+                    src="./images/illustrations.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Online Courses</h3>
-                <p class="text">Marketing</p>
-              </div>
+                <div class="project-list-box">
+                  <h3 class="title">Screen Illustrations</h3>
+                  <p class="text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/instaconcept.jpg"
-                  alt="Instagram Stories"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+              <a href="" class="project-link">
+                <div class="hover-box">
+                  <img
+                    src="./images/courses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Instagram Stories Concept</h3>
-                <p class="text">Design</p>
-              </div>
+                <div class="project-list-box">
+                  <h3 class="title">Online Courses</h3>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/organic.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+              <a href="" class="project-link">
+                <div class="hover-box">
+                  <img
+                    src="./images/instaconcept.jpg"
+                    alt="Instagram Stories"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Organic Food</h3>
-                <p class="text">Web Site</p>
-              </div>
+                <div class="project-list-box">
+                  <h3 class="title">Instagram Stories Concept</h3>
+                  <p class="text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <div class="hover-box">
-                <img
-                  src="./images/coffee.jpg"
-                  alt="Coffee"
-                  width="360"
-                  height="300"
-                />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-                  </p>
+              <a href="" class="project-link">  
+                <div class="hover-box">
+                  <img
+                    src="./images/organic.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="project-list-box">
-                <h3 class="title">Fresh Coffee</h3>
-                <p class="text">Web Site</p>
-              </div>
+                <div class="project-list-box">
+                  <h3 class="title">Organic Food</h3>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="project-link">
+                <div class="hover-box">
+                  <img
+                    src="./images/coffee.jpg"
+                    alt="Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
+                <div class="project-list-box">
+                  <h3 class="title">Fresh Coffee</h3>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
