--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         <div class="backdrop is-hidden" data-modal>
           <div class="modal">
             <button type="button" class="btn-modal" data-modal-close>
-              <img class="close" src="./images/close-black-18dp (2) 1(1).svg" alt="x">
+              <svg class="icon-close" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black"></use>
+              </svg>
             </button>
           </div>
         </div>
